--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -85,6 +85,12 @@ html, body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
 a {
   text-decoration: none !important;
 }
@@ -669,24 +675,18 @@ welcome
 }
 
 .appContent{
-  margin-top: 15%;
+  /* margin-top: 15%; */
   /* transform: translateY(-55%); */
   text-align:left;
   width: 100%;
   flex: none;
   margin-bottom: 30px;
 }
-.appContent{
-  margin-top: 15%;
-  /* transform: translateY(-55%); */
-  text-align:left;
-  width: 100%;
- 
-  flex: none;  
-}
+
 .flash{
   margin-top: 15%;
 }
+
 .welcome-area .header-text h1 {
   font-weight: 500;
   font-size: 36px;
@@ -1472,14 +1472,18 @@ footer
 footer {
   background-image: linear-gradient(127deg, #a759d1 0%, #8261ee 91%);
   padding-top: 50px;
+  margin-top: auto;
+  min-width: 100vw;
 }
+
 .Footer-user{
-  position: absolute;
+  /* position: absolute; */
   bottom: 0;
   left: 0;
   width: 100%;
   margin-top: 50px;
 }
+
 footer .social {
   overflow: hidden;
   margin-top: 10px;
