--- a/website/templates/marked_problems.html
+++ b/website/templates/marked_problems.html
@@ -4,42 +4,24 @@
 
 {% block features %}
 {% endblock%}
-
-{% block footer %}
-{% if problems is not none %}
-<footer class="Footer-user">
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-12 col-md-12 col-sm-12">
-				<ul class="social">
-					<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-					<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-					<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-					<li><a href="#"><i class="fa fa-rss"></i></a></li>
-					<li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-				</ul>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-lg-12">
-				<p class="copyright">Copyright &copy; a bunch of nerds</p>
-			</div>
-		</div>
-	</div>
-</footer>
-{% endif %}
-{% endblock %}
-
 {% block app_content %}
 <div class="appContent"> 
+{% if problems %}
 	<h1><center>Marked Problems</center></h1>
 	<br><br>
-{% if problems %}
 <table class="table table-striped">
+            <thead style="background: #212529; color: grey; border: 20px;">
+            <tr>
+                <th scope="col">PROBLEMS</th>
+                <th scope="col" style="text-align: end;">ACTION</th>
+            </tr>
+        </thead>
 {% for problem in problems %}
 	{% include "_problem.html" %}
 {% endfor %}
 </table>
+{% else %}
+	<h1><center>You have currently no marked Problems</center></h1>
 {% endif %}
 </div>
 
