--- a/website/templates/user_result.html
+++ b/website/templates/user_result.html
@@ -24,7 +24,7 @@
         <thead style="background: #212529; color: grey; border: 20px;">
             <tr>
                 <th scope="col">PROBLEMS</th>
-                <th scope="col">TAGS</th>
+                <th scope="col" style="text-align: end;">ACTION</th>
             </tr>
         </thead>
         <tr><td></td></tr>
@@ -32,27 +32,6 @@
 			{% include '_problem.html' %}
 		{% endfor %}
         </table>
-    {% else %}
-    <footer class="Footer-user">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 col-md-12 col-sm-12">
-                    <ul class="social">
-                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                        <li><a href="#"><i class="fa fa-rss"></i></a></li>
-                        <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-12">
-                    <p class="copyright">Copyright &copy; a bunch of nerds</p>
-                </div>
-            </div>
-        </div>
-    </footer>
 	{% endif %}
     <nav aria-label="...">
         <ul class="pagination justify-content-between">
